--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/ckho_logo"
+        android:roundIcon="@drawable/ckho_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
